--- a/index.html
+++ b/index.html
@@ -14,6 +14,31 @@
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.2);
         }
+        .video-container {
+            position: relative;
+            padding-bottom: 177.77%; /* Aspect ratio untuk shorts (9:16) */
+            height: 0;
+            overflow: hidden;
+            border-radius: 1rem;
+        }
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+        /* Custom Scrollbar */
+        .custom-scrollbar::-webkit-scrollbar {
+            width: 4px;
+        }
+        .custom-scrollbar::-webkit-scrollbar-track {
+            background: transparent;
+        }
+        .custom-scrollbar::-webkit-scrollbar-thumb {
+            background: #cbd5e1;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body class="bg-gradient-to-br from-blue-500 to-indigo-700 min-h-screen flex items-center justify-center p-4">
@@ -47,7 +72,7 @@
     </div>
 
     <!-- Data Container -->
-    <div id="data-container" class="w-full max-w-lg hidden">
+    <div id="data-container" class="w-full max-w-2xl hidden">
         <div class="glass-card rounded-3xl shadow-2xl overflow-hidden">
             <div class="bg-blue-600 p-6 text-white flex justify-between items-center">
                 <div>
@@ -61,52 +86,80 @@
                 </button>
             </div>
             
-            <div class="p-8 space-y-6">
-                <!-- Profile Header -->
-                <div class="flex items-center gap-4 pb-6 border-b border-slate-100">
-                    <div class="w-16 h-16 bg-indigo-100 rounded-full flex items-center justify-center text-indigo-600 font-bold text-2xl" id="initials">
-                        S
-                    </div>
-                    <div>
-                        <h3 id="display-nama" class="text-xl font-bold text-slate-800 leading-tight">Nama Siswa</h3>
-                        <p id="display-kelas" class="text-slate-500 font-medium">Kelas XX</p>
-                    </div>
-                </div>
+            <div class="p-6 md:p-8">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                    <!-- Left Side: Data -->
+                    <div class="space-y-6">
+                        <div class="flex items-center gap-4 pb-6 border-b border-slate-100">
+                            <div class="w-16 h-16 bg-indigo-100 rounded-full flex items-center justify-center text-indigo-600 font-bold text-2xl flex-shrink-0" id="initials">
+                                S
+                            </div>
+                            <div>
+                                <h3 id="display-nama" class="text-xl font-bold text-slate-800 leading-tight">Nama Siswa</h3>
+                                <p id="display-kelas" class="text-slate-500 font-medium">Kelas XX</p>
+                            </div>
+                        </div>
 
-                <!-- Info Grid -->
-                <div class="grid grid-cols-1 gap-4">
-                    <div class="bg-slate-50 p-4 rounded-2xl">
-                        <p class="text-xs text-slate-400 font-semibold uppercase tracking-wider mb-1">NIS Siswa</p>
-                        <p id="display-nis" class="text-slate-700 font-bold">12345678</p>
-                    </div>
+                        <div class="grid grid-cols-1 gap-4">
+                            <div class="bg-slate-50 p-4 rounded-2xl">
+                                <p class="text-xs text-slate-400 font-semibold uppercase tracking-wider mb-1">NIS Siswa</p>
+                                <p id="display-nis" class="text-slate-700 font-bold">12345678</p>
+                            </div>
 
-                    <div class="bg-blue-50 p-4 rounded-2xl border border-blue-100">
-                        <p class="text-xs text-blue-400 font-semibold uppercase tracking-wider mb-1">Akun Belajar.id</p>
-                        <p id="display-akun" class="text-blue-700 font-bold break-all">siswa@belajar.id</p>
-                        <button onclick="copyText('display-akun')" class="mt-2 text-[10px] bg-blue-600 text-white px-2 py-1 rounded uppercase font-bold">Salin</button>
-                    </div>
+                            <div class="bg-blue-50 p-4 rounded-2xl border border-blue-100">
+                                <p class="text-xs text-blue-400 font-semibold uppercase tracking-wider mb-1">Akun Belajar.id</p>
+                                <p id="display-akun" class="text-blue-700 font-bold break-all">siswa@belajar.id</p>
+                                <button onclick="copyText('display-akun')" class="mt-2 text-[10px] bg-blue-600 text-white px-2 py-1 rounded uppercase font-bold">Salin</button>
+                            </div>
 
-                    <div class="bg-indigo-50 p-4 rounded-2xl border border-indigo-100">
-                        <p class="text-xs text-indigo-400 font-semibold uppercase tracking-wider mb-1">Password</p>
-                        <div class="flex justify-between items-center">
-                            <p id="display-password" class="text-indigo-700 font-bold">********</p>
-                            <button id="toggle-pwd" class="text-indigo-400 hover:text-indigo-600">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
-                                </svg>
-                            </button>
+                            <div class="bg-indigo-50 p-4 rounded-2xl border border-indigo-100">
+                                <p class="text-xs text-indigo-400 font-semibold uppercase tracking-wider mb-1">Password</p>
+                                <div class="flex justify-between items-center">
+                                    <p id="display-password" class="text-indigo-700 font-bold">********</p>
+                                    <button id="toggle-pwd" class="text-indigo-400 hover:text-indigo-600">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+
+                            <div class="bg-slate-50 p-4 rounded-2xl">
+                                <p class="text-xs text-slate-400 font-semibold uppercase tracking-wider mb-1">Status</p>
+                                <span id="display-status" class="inline-block px-3 py-1 rounded-full text-xs font-bold mt-1">Status</span>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="bg-slate-50 p-4 rounded-2xl">
-                        <p class="text-xs text-slate-400 font-semibold uppercase tracking-wider mb-1">Status</p>
-                        <span id="display-status" class="inline-block px-3 py-1 rounded-full text-xs font-bold mt-1">Status</span>
+                    <!-- Right Side: Tutorial (Conditional) -->
+                    <div id="tutorial-section" class="hidden space-y-4">
+                        <div class="flex items-center gap-2 text-amber-600 mb-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd" />
+                            </svg>
+                            <h4 class="font-bold text-sm uppercase">Panduan Aktivasi</h4>
+                        </div>
+                        <p class="text-xs text-slate-500 leading-relaxed mb-4">Akun Anda belum aktif. Ikuti salah satu panduan video di bawah ini:</p>
+                        
+                        <div class="space-y-4 max-h-[400px] overflow-y-auto pr-2 custom-scrollbar">
+                            <!-- Video 1 -->
+                            <div class="video-container shadow-md">
+                                <iframe src="https://www.youtube.com/embed/Mfd1NXRjWAg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                            <!-- Video 2 -->
+                            <div class="video-container shadow-md">
+                                <iframe src="https://www.youtube.com/embed/1s0MsBVajMo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                            <!-- Video 3 -->
+                            <div class="video-container shadow-md">
+                                <iframe src="https://www.youtube.com/embed/RopJOoSQxpg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Footer dengan Tahun Otomatis -->
         <p class="text-center text-white/60 text-[10px] mt-6">© <span id="current-year"></span> Aplikasi Cek Akun Belajar.id</p>
     </div>
 
@@ -124,10 +177,8 @@
         let currentSiswa = null;
         let pwdVisible = false;
 
-        // Set Tahun Otomatis
         document.getElementById('current-year').textContent = new Date().getFullYear();
 
-        // Fetch data saat aplikasi dibuka
         window.onload = async () => {
             loading.classList.remove('hidden');
             try {
@@ -186,7 +237,8 @@
             const nis = getValue(currentSiswa, ["nis", "induk"]);
             const akun = getValue(currentSiswa, ["belajar", "id", "email"]);
             const pwd = getValue(currentSiswa, ["password", "sandi", "pwd"]);
-            const status = (getValue(currentSiswa, ["status", "keterangan"]) || "AKTIF").toUpperCase();
+            const statusRaw = getValue(currentSiswa, ["status", "keterangan"]) || "AKTIF";
+            const status = statusRaw.toUpperCase();
 
             document.getElementById('display-nama').innerText = nama || "Tanpa Nama";
             document.getElementById('display-kelas').innerText = kelas || "-";
@@ -197,10 +249,15 @@
             document.getElementById('initials').innerText = (nama || "?").charAt(0).toUpperCase();
 
             const statusBadge = document.getElementById('display-status');
-            if (status.includes('BELUM')) {
+            const tutorialSection = document.getElementById('tutorial-section');
+
+            // Cek jika status mengandung kata "BELUM" atau "TIDAK AKTIF"
+            if (status.includes('BELUM') || status.includes('TIDAK AKTIF')) {
                 statusBadge.className = "inline-block px-3 py-1 rounded-full text-xs font-bold mt-1 bg-red-100 text-red-600";
+                tutorialSection.classList.remove('hidden');
             } else {
                 statusBadge.className = "inline-block px-3 py-1 rounded-full text-xs font-bold mt-1 bg-green-100 text-green-600";
+                tutorialSection.classList.add('hidden');
             }
 
             loginContainer.classList.add('hidden');
@@ -230,7 +287,6 @@
             dummy.select();
             document.execCommand("copy");
             document.body.removeChild(dummy);
-            // Menggunakan UI feedback alih-alih alert browser
             const btn = event.target;
             const originalText = btn.innerText;
             btn.innerText = "BERHASIL!";
